# Rental-Car-Alert

./: .gitignore  Functions_Rental_Car_Alert.py  README.md  Rental-Car-Alert.py  _requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: almeria_airport.yml  flores_airport_alert.yml  heraklion_alert.yml  heraklion_centauro_alert.yml  rental-car-alert.yml
docs/: ARCHITECTURE.md  SETUP.md
rental_car_alert/: __init__.py  __main__.py  cli.py  config.py  models.py  notifications.py
rental_car_alert/parsers/: __init__.py  doyouspain.py
rental_car_alert/scrapers/: __init__.py  doyouspain.py
rental_car_alert/services/: __init__.py  email.py  monitor.py
scripts/: run_workflow_debug.py
